[gd_scene load_steps=5 format=2]

[ext_resource path="res://game_script/battle/BattleManager.gd" type="Script" id=1]
[ext_resource path="res://components/battle/formation/PartyFormation.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/UI/UIBattle.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/UI/UISelectArea.tscn" type="PackedScene" id=5]

[node name="BattleManager" type="Node2D"]
script = ExtResource( 1 )

[node name="FormationNode" type="Node2D" parent="."]

[node name="PartyFormation" parent="FormationNode" instance=ExtResource( 2 )]

[node name="SelectArea" parent="." instance=ExtResource( 5 )]

[node name="UIBattle" parent="." instance=ExtResource( 3 )]

[connection signal="select_area" from="FormationNode/PartyFormation" to="SelectArea" method="_on_user_Select_area"]
[connection signal="choose_done" from="SelectArea" to="FormationNode/PartyFormation" method="_on_SelectArea_choose_done"]
